Inclusão de tela de adição de Posts

--- a/BlogWeb1/Views/Post/Index.cshtml
+++ b/BlogWeb1/Views/Post/Index.cshtml
@@ -15,12 +15,9 @@
         <table>
             <thead>
                 <tr>
-                    @foreach (var p in ViewBag.Post)
-                    {
-                        <td>@p.Titulo</td>
-                        <td>@p.Resumo</td>
-                        <td>@p.Categoria</td>
-                    }
+                        <td>Título</td>
+                        <td>Resumo</td>
+                        <td>Categoria</td>
                 </tr>
             </thead>
             <tbody>
