Post/Index.cshtml: Adiciona botão remover

--- a/BlogWeb1/Views/Post/Index.cshtml
+++ b/BlogWeb1/Views/Post/Index.cshtml
@@ -27,6 +27,7 @@
                         <td>@post.Titulo</td>
                         <td>@post.Resumo</td>
                         <td>@post.Categoria</td>
+                        <td><a href="/Post/Remove/@post.Id">Remover</a></td>
                     </tr>
                 }
             </tbody>
