Exercício 4.8 PostController: Adição dos Métodos Vizualisa e Edita PostDAO: Adição dos métodos BuscaPorId usado pelo método Vizualisa para retorno de instância de Post selecionado. Adição do método Atualiza que muda o estado do Post usando o método Entry e depois salva essas alterações usando o SaveChanges. Views/Post: Adiciona a View Vizualiza

--- a/BlogWeb1/Views/Post/Index.cshtml
+++ b/BlogWeb1/Views/Post/Index.cshtml
@@ -15,20 +15,23 @@
         <table>
             <thead>
                 <tr>
-                        <td>Título</td>
-                        <td>Resumo</td>
-                        <td>Categoria</td>
+                    <td></td>
+                    <td>Título</td>
+                    <td>Resumo</td>
+                    <td>Categoria</td>
+                    <td></td>
                 </tr>
             </thead>
             <tbody>
                 @foreach (var post in Model)
                 {
-                    <tr>
-                        <td>@post.Titulo</td>
-                        <td>@post.Resumo</td>
-                        <td>@post.Categoria</td>
-                        <td><a href="/Post/Remove/@post.Id">Remover</a></td>
-                    </tr>
+                <tr>
+                    <td><a href="/Post/Vizualisa/@post.Id">Editar</a></td>
+                    <td>@post.Titulo</td>
+                    <td>@post.Resumo</td>
+                    <td>@post.Categoria</td>
+                    <td><a href="/Post/Remove/@post.Id">Remover</a></td>
+                </tr>
                 }
             </tbody>
         </table>
