--- a/BlogWeb1/Views/Post/Vizualisa.cshtml
+++ b/BlogWeb1/Views/Post/Vizualisa.cshtml
@@ -17,12 +17,15 @@
             <label>
                 Título: <input name="titulo" value="@Model.Titulo"/>
             </label>
+            @Html.ValidationMessage("titulo")
             <label>
                 Resumo: <input name="resumo" value="@Model.Resumo" />
             </label>
+            @Html.ValidationMessage("resumo")
             <label>
                 Categoria: <input name="categoria" value="@Model.Categoria" />
             </label>
+            @Html.ValidationMessage("categoria")
             <label>
                 <input type="hidden" name="publicado" value="@Model.Publicado.ToString()" />
                 <input type="hidden" name="dataPublicacao" value="@Model.DataPublicacao" />
