--- a/BlogWeb1/Views/Post/Novo.cshtml
+++ b/BlogWeb1/Views/Post/Novo.cshtml
@@ -14,19 +14,24 @@
     <div>
         <form action="/Post/Adiciona" method="post">
             <label>
-                Título: <input name="titulo" />
+                Título: <input name="titulo" value="@Model.Titulo" maxlength="50" required/>
             </label>
             @Html.ValidationMessage("titulo")
             <label>
-                Resumo: <input name="resumo" />
+                Resumo: <input name="resumo" value="@Model.Resumo" required/>
             </label>
             @Html.ValidationMessage("resumo")
             <label>
-                Categoria: <input name="categoria" />
+                Categoria: <input name="categoria" value="@Model.Categoria"/>
             </label>
             @Html.ValidationMessage("categoria")
             <button type="submit">Cadastrar</button>
         </form>
     </div>
+    <script src="~/Scripts/jquery-3.3.1.js"></script>
+    <script src="~/Scripts/jquery.validate.js"></script>
+    <script>
+        jQuery("form").validate();
+    </script>
 </body>
 </html>
