--- a/BlogWeb1/Views/Post/Vizualisa.cshtml
+++ b/BlogWeb1/Views/Post/Vizualisa.cshtml
@@ -15,11 +15,11 @@
         <form action="/Post/Edita" method="post">
             <input type="hidden" name="id" value="@Model.Id" />
             <label>
-                Título: <input name="titulo" value="@Model.Titulo"/>
+                Título: <input name="titulo" value="@Model.Titulo" maxlength="50" required />
             </label>
             @Html.ValidationMessage("titulo")
             <label>
-                Resumo: <input name="resumo" value="@Model.Resumo" />
+                Resumo: <input name="resumo" value="@Model.Resumo" required />
             </label>
             @Html.ValidationMessage("resumo")
             <label>
@@ -33,5 +33,10 @@
             <button type="submit">Cadastrar</button>
         </form>
     </div>
+    <script src="~/Scripts/jquery-3.3.1.js"></script>
+    <script src="~/Scripts/jquery.validate.js"></script>
+    <script>
+        jQuery("form").validate();
+    </script>
 </body>
 </html>
