--- a/BlogWeb1/Views/Post/Visualiza.cshtml
+++ b/BlogWeb1/Views/Post/Visualiza.cshtml
@@ -18,17 +18,7 @@
             @Html.HiddenFor(p => p.Publicado)
             @Html.HiddenFor(p => p.DataPublicacao)
 
-            @Html.LabelFor(p => p.Titulo)
-            @Html.TextBoxFor(p => p.Titulo)
-            @Html.ValidationMessageFor(p => p.Titulo)
-
-            @Html.LabelFor(p => p.Resumo)
-            @Html.TextBoxFor(p => p.Resumo)
-            @Html.ValidationMessageFor(p => p.Resumo)
-
-            @Html.LabelFor(p => p.Categoria)
-            @Html.TextBoxFor(p => p.Categoria)
-            @Html.ValidationMessageFor(p => p.Categoria)
+            @Html.EditorFor(p => p)
 
             <button type="submit">Cadastrar</button>
         }
@@ -36,8 +26,5 @@
     <script src="~/Scripts/jquery-3.3.1.js"></script>
     <script src="~/Scripts/jquery.validate.js"></script>
     <script src="~/Scripts/jquery.validate.unobtrusive.js"></script>
-    <script>
-        jQuery("form").validate();
-    </script>
 </body>
 </html>
